# monalisa

./: CMakeLists.txt  README.md  monalisa.desktop
src/: FileHandler.cpp  FileHandler.hpp  ImageViewer.cpp  ImageViewer.hpp  ImageWidget.cpp  ImageWidget.hpp  main.cpp
